--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,8 @@ openai
 transformers
 torch
 pydantic
-python-dotenv 
+python-dotenv
 langchain_openai
-langchain_community
 beautifulsoup4
 langchain-tavily
+langgraph-supervisor
